<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarMuebleActivity">

    <TextView
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa_bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/boton_regresar"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/titulo_agregar_mueble"
            android:textSize="32sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:hint="@string/nombre_mueble"/>

            <EditText
                android:id="@+id/etColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:layout_marginTop="8dp"
                android:hint="@string/color_mueble"/>

            <EditText
                android:id="@+id/etPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:layout_marginTop="8dp"
                android:hint="@string/precio_mueble"/>

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:layout_marginTop="8dp"
                android:hint="@string/descripcion_mueble"/>

            <EditText
                android:id="@+id/etCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:layout_marginTop="8dp"
                android:hint="@string/cantidad_mueble"/>

            <TextView
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nexa_bold"
                android:gravity="center"
                android:text="@string/boton_guardar"
                android:textColor="@color/black"
                android:textSize="22sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>